--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,7 @@ authors = ["Michael Pankov <work@michaelpankov.com>"]
 
 [dependencies]
 postgres = "0.9"
+serde = { version = "1.0" }
+serde_json = "1.0"
+serde_derive = "1.0"
+serde_with = { version = "1.4.0", features = ["json"]}
